; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_color_in_range.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_color_in_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_color_key = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wined3d_color_key*, i64)* @color_in_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @color_in_range(%struct.wined3d_color_key* %0, i64 %1) #0 {
  %3 = alloca %struct.wined3d_color_key*, align 8
  %4 = alloca i64, align 8
  store %struct.wined3d_color_key* %0, %struct.wined3d_color_key** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.wined3d_color_key*, %struct.wined3d_color_key** %3, align 8
  %7 = getelementptr inbounds %struct.wined3d_color_key, %struct.wined3d_color_key* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp sge i64 %5, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = load %struct.wined3d_color_key*, %struct.wined3d_color_key** %3, align 8
  %13 = getelementptr inbounds %struct.wined3d_color_key, %struct.wined3d_color_key* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp sle i64 %11, %14
  br label %16

16:                                               ; preds = %10, %2
  %17 = phi i1 [ false, %2 ], [ %15, %10 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
